Avoids rubocop deprecation in next version
In the next version of rubocop, it will be necessary to explicitly
include rubocop-rails, so this PR does exactly that.

The PR also includes fixes introduced by the new rails cops.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,7 @@
 require:
   - rubocop-rspec
   - rubocop-performance
+  - rubocop-rails
 
 AllCops:
   # Exclude anything that isn't really part of our code.
