--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ references:
           RACK_ENV: test
           VCR: 1
           PARALLEL_TEST_PROCESSORS: 7
+          NOMIS_OAUTH_HOST: https://sign-in-dev.hmpps.service.justice.gov.uk
       - image: circleci/postgres:10.5-alpine
         environment:
           POSTGRES_USER: ubuntu
