--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,6 +139,10 @@ jobs:
     <<: *defaults
     <<: *test_container_config
     steps:
+      - run:
+          name: Install CMake
+          command: |
+            sudo apt update && sudo apt install cmake
       - checkout
       - attach_workspace:
           at: ~/repo
@@ -219,11 +223,16 @@ jobs:
           command: |
             cc-test-reporter before-build
             bundle exec rake parallel:spec
-            cc-test-reporter after-build --coverage-input-type simplecov --exit-code $?
+            cc-test-reporter after-build --coverage-input-type lcov --exit-code $?
           environment:
+            UNDERCOVER: 1
             ALLOCATION_MANAGER_HOST: https://allocation-manager-staging.apps.live-1.cloud-platform.service.justice.gov.uk
             RAILS_ENV: test
             RACK_ENV: test
+      - run:
+          name: Check Coverage using undercover gem
+          command: |
+            bundle exec undercover --compare origin/main -l coverage/lcov.info
       - store_test_results:
           path: coverage
       - store_artifacts:
@@ -309,7 +318,6 @@ jobs:
             kubectl apply --record=false -f ./deploy/preprod
           environment:
             <<: *github_team_name_slug
-
 
   deploy_production:
     <<: *deploy_container_config
