--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -376,7 +376,8 @@ workflows:
             - build_and_push_docker_image
           filters:
             branches:
-              only: main
+              only:
+                main
       - test_staging:
           requires:
             - build_and_push_docker_image
